--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=inboxiq
+spring.application.name=QDoc
+
+
+#DataSource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/qdocdb
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Spring JPA Configuration
+spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
