--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Spring JPA Configuration
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
